[project]
name = "comfyui"
version = "0.1.6"
description = "Modern batch processing tool for ComfyUI with bilingual support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "customtkinter",
    "websocket-client",
    "pillow",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
